# gpufilter

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  ProjectHome.md  README  README.md  TODO
grave/: CMakeLists.txt
grave/images/: blocks-2d.eps  cactus-512-gauss-cpu.eps  cactus-512-gauss-gpu.eps  sat-stages.eps
grave/src/: CMakeLists.txt  run_alg5.cu
images/: cactus-512-bspline-cpu.eps  cactus-512-bspline-gpu.eps  cactus-512.eps
include/: alg4.cuh  alg5.cuh  alloc.h  cpufilter.h  cpuground.h  dvector.h  error.h  extension.h  gpuconsts.cuh  gpudefs.cuh  gpudefs.h  gpufilter.cuh  gpufilter.h  mat.h  sat.cuh  symbol.h  timer.h  util.h
lib/util/: CMakeLists.txt  alg0_xd_cpu.h  alloc.h  dvector.h  error.h  gaussian.cpp  gaussian.h  gaussian.hpp  image.cpp  image.h  linalg.h  linalg.hpp  recfilter.h  solve.h  symbol.h  timer.cpp  timer.h  util.h
paredge/: Makefile  README.md  alg4d_gpu.cuh  alg4pd_gpu.cuh  alg5d_gpu.cuh  conv.h  fix_ref.bib  gpu_geforcetitan.txt  gpu_quadrok2000.txt  gpud_aux.cuh  perf01.txt  perf02.txt  recAlg_cuda.cu  recfilter.sobj  recursiveGaussian.cpp  recursiveGaussian_cuda.cu  recursiveGaussian_kernel.cuh  rg.cuh  run.sh  sage_session.sobj
paredge/results/: calhouse2.xcf
python/: alg5.ipynb  alg5cpe.ipynb  alg5epe.ipynb  alg5pe.ipynb  all_functions.ipynb
recxd/: CMakeLists.txt  README.md  run.py  run_all.sh
recxd/cub/: Makefile  cub_highLinRec_v7_int.cu  cubiir.cu  cubps.cu  simple1Gis.cu  simple7s.cu  simple8s.cu
recxd/nb/: cpu_gpu_comparison.ipynb  plot_performance.ipynb
recxd/plr/: Makefile  plr1.cu  plr1_fwd_rev.cu  plr2.cu  plr3.cu  plr4.cu  plr5.cu  plrps.cu
recxd/results/gpu_gtx1080/: alg3_1_orig_fwd_rev.out  alg3_3d.out  alg3_fix0_fwd_rev.out  alg3_fix1_fwd_rev.out  alg3_fix2_fwd_rev.out  alg3_fix3_fwd_rev.out  alg3_fix4_fwd_rev.out  alg3_fix5_fwd_rev.out  alg3_fix6_fwd_rev.out  alg3_fwd_ps.out  alg3_fwd_rev.out  alg3_step2_fwd_rev.out  alg_rd.out  alg_smem_rd.out  cub_fwd_ps.out  cub_fwd_rev.out  memcpy_fwd_ps.out  memcpy_fwd_rev.out  plr1_fwd_ps.out  plr1_fwd_rev.out  sam_fwd_ps.out  thrust_fwd_ps.out
recxd/results/gpu_teslap100/: alg3_1.out  alg3_3d.out  alg3_fwd_ps.out  alg3_fwd_rev.out  alg3_paper_fwd_rev.out  alg3_step2_fwd_rev.out  alg6_1.out  alg6i1_1.out  alg6i2_1.out  alg_rd.out  alg_smem_rd.out  cub_fwd_ps.out  cub_fwd_rev.out  memcpy_fwd_ps.out  memcpy_fwd_rev.out  plr1_fwd_ps.out  plr1_fwd_rev.out  thrust_fwd_ps.out
recxd/results/gpu_titanx/old/results20180625/: alg3_v1.out  alg3_v2.out  alg3_v3.out  alg3_v3new.out  memcpy.out  plr1.out
recxd/results/gpu_titanx/old/results20190324/: alg3_v3.out  alg3_v4.out  alg3_v5.out  memcpy.out  plr1.out
recxd/results/gpu_titanx/old/results20190601/: alg3_3d.out  alg3_fwd_rev.out  plr1_fwd_rev.out
recxd/results/gpu_titanx/old/results20190609/: alg3_3d.out
recxd/results/gpu_titanx/old/results20190703/: cubps.out  plrps.out  thrustps.out
recxd/results/gpu_titanx/old/results20190706/: alg3_ps.out  cubps.out  plrps.out
recxd/results/gpu_titanx/old/results20190710/: alg3_ps.out  cubps.out  thrustps.out
recxd/results/gpu_titanx/old/results20190713/: alg3_fwd1_ps.out  alg3_fwd2_ps.out
recxd/results/gpu_titanx/old/results20190801/: PLRresults-Andre.xlsx  alg3_1_fwd_rev.out  alg3_3d.out  alg3_fwd_ps.out  alg3_fwd_rev.out  cub_fwd_ps.out  cub_fwd_rev.out  memcpy.out  plr1_fwd_ps.out  plr1_fwd_rev.out  sam.out  thrust_fwd_ps.out
recxd/results/gpu_titanx/old/results20190811/: alg3_3d.out  alg3_fwd_ps.out  alg3_fwd_rev.out  alg3_fwd_rf.out  cub_fwd_ps.out  cub_fwd_rev.out  cub_fwd_rf.out  memcpy_fwd_ps.out  plr1_fwd_ps.out  plr1_fwd_rev.out  plr1_fwd_rf.out  sam_fwd_ps.out  thrust_fwd_ps.out
recxd/results/gpu_titanx/old/results20190920/: alg6_1.out  alg6i1_1.out  alg6i2_1.out
recxd/sam/: README.md  SAMinstaller1.1.cu  sam.h  sam_pre1.1.h  testSAM1.1.cu
recxd/src/: CMakeLists.txt  alg3_1d.cu  alg3_1d.cuh  alg3_1d_fwd.cuh  alg3_1d_fwd_ps.cuh  alg3_1d_step2.cuh  alg3_3d.cu  alg3_3d.cuh  alg6.cu  alg6.cuh  alg_rd.cu  alg_rd.cuh  gen_random_samples.cpp  memcpy.cu  paper.cu
recxd/thrustps/: CMakeLists.txt  thrustps.cu
scripts/: Btob.py  Makefile  plots.gpi  resavg.py  run.sh  run5vb.sh  run6b_1.sh  run6b_3.sh  run_Bspline.sh  run_Gaussian.sh  run_all.sh  run_decay.sh  run_gauss_dir.sh  run_gauss_fft.sh  run_zero.sh  runall.sh  rung.sh  runs.sh
src/: CMakeLists.txt  alg0_cpu.h  alg3.cu  alg3_gpu.cuh  alg3v4v5v6_gpu.cuh  alg4.cu  alg4_gpu.cuh  alg4v5v6_gpu.cuh  alg5.cu  alg5_gpu.cuh  alg5f4.cu  alg5f4_gpu.cuh  alg5varc.cu  alg5varc_gpu.cuh  alg6.cu  alg6_clamp.cuh  alg6_gpu.cuh  alg6_reflect.cuh  alg6_repeat.cuh  app_recursive.cc  app_recursive_cpu.cc  app_recursive_gpu.cc  cpudefs.h  example_bspline.cc  example_gauss.cc  example_r.cc  example_r1.cc  example_r2.cc  example_r3.cc  example_r4.cc  example_r5.cc  example_sat.cc  example_sat1.cc  example_sat2.cc  example_sat3.cc  gauss_dir_cpu.h  gauss_dir_fft.cu  gpudefs.cpp  gpudefs.cu  gpudefs.h  (+6 more)
